# tuting

./: Dockerfile  LICENSE  README.md  README.ru.md  pyproject.toml
.github/workflows/: ci.yml  pr.yml
src/tuting_bot/: api_client.py  main.py
src/tuting_bot/handlers/: __init__.py  add_student.py  commands.py  start.py
tests/: test_api_client.py  test_myapplication.py
